@@ -1,4 +1,8 @@
 2014-05-07  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/xfer-source-holding.c: Allow to rad s SPINT_DUMPFILE
+	  from holding disk.
+
+2014-05-07  Jean-Louis Martineau <martineau@zmanda.com>
 	* packaging/sun-pkg/buildpkg: gmake is in /opt/csw/bin
 
 2014-05-06  Jean-Louis Martineau <martineau@zmanda.com>
